--- a/_posts/2018-05-10-FML.md
+++ b/_posts/2018-05-10-FML.md
@@ -21,16 +21,16 @@ date: 2018-05-10 15:16 +0100
 FML is an app in which you assign yourself tasks to do, and assign various point values to them. You log the completions of the tasks, and clock up a running total of points. In other words, it's a standard task tracking app with elements of gamification. It also has an ugly purple color scheme. [You can sign up and use it here.](http://fml.cleverna.me) [The source code is available here.](https://github.com/JonnieCache/FML)
 
 <div class="gallery">
-  {% thumb src="/assets/img/fml_screenshots/fml_screenshot_1.png" width="360" %}
-  {% thumb src="/assets/img/fml_screenshots/fml_screenshot_2.png" width="360" %}
+  <!-- {% thumb src="/assets/img/fml_screenshots/fml_screenshot_1.png" width="360" %} -->
+  <!-- {% thumb src="/assets/img/fml_screenshots/fml_screenshot_2.png" width="360" %} -->
 </div>
 <!-- more -->
 
 The motivation for this was playing games like Rimworld, where you have stewardship over a number of characters and you have to achieve various aims, while simultaneously keeping them happy, defined in terms of a number of "needs," eg. food, rest, comfort etc. This model, which was first established in The Sims, places a lot of emphasis on milking as much productivity out of the day/night cycle while keeping these needs satisfied to a minimum level so your charges don't fall apart.
 
 <div class="gallery">
-  {% thumb src="/assets/img/rimworld_screenshot.png" height="200" %}
-  {% thumb src="/assets/img/sims_screenshot.jpg" height="200" %}
+  <!-- {% thumb src="/assets/img/rimworld_screenshot.png" height="200" %} -->
+  <!-- {% thumb src="/assets/img/sims_screenshot.jpg" height="200" %} -->
 </div>
 
 I know what you're thinking: this sounds like a perfect metaphor for the treadmill which is my life under capitalism. Those games are set up in such a way that you're compelled to optimize the use of time within the day in pursuit of maximum efficiency, and that this process becomes a lot of fun.
@@ -50,7 +50,7 @@ Upon clicking `Save`, a card representing the task is added to the main interfac
     <p>Type to search, use the arrow keys to select a result, and hit enter to complete the task.</p>
   </div>
   
-  {% thumb src="/assets/img/fml_screenshots/fml_screenshot_3.png" width="400" %}
+  <!-- {% thumb src="/assets/img/fml_screenshots/fml_screenshot_3.png" width="400" %} -->
 </div>
 
 You will also, assuming it is there, see the meter at the top fill up with an amount proportional to the points value assigned to the task. To set how many points the meter requires in order to be filled, click the tag icon on the side of the task card. This will bring up a form for editing the tag, where you can set the name, the colour and aditionally hide the meter.
