--- a/_posts/2018-05-10-FML.md
+++ b/_posts/2018-05-10-FML.md
@@ -18,7 +18,7 @@ date: 2018-05-10 15:16 +0100
 ##### Yet Another Todo App (but with points)
 {: .center }
 
-FML is an app in which you assign yourself tasks to do, and assign various point values to them. You log the completions of the tasks, and clock up a running total of points. In other words, it's a standard task tracking app with elements of gamification. It also has an ugly purple color scheme. [You can sign up and use it here.](http://fml.cleverna.me) [The source code is available here.](https://github.com/JonnieCache/FML)
+FML is an app in which you give yourself tasks to do, and assign various point values to them. You log the completions of the tasks, and clock up a running total of points. In other words, it's a standard task tracking app with elements of gamification. It also has an ugly purple color scheme. [You can sign up and use it here.](http://fml.cleverna.me) [The source code is available here.](https://github.com/JonnieCache/FML)
 
 <div class="gallery">
   {% thumb src="/assets/img/fml_screenshots/fml_screenshot_1.png" width="360" %}
